--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -5,23 +5,23 @@
     consul_config_name: '{{ beacon_node_cont_name | replace("-", "_") }}'
     consul_services:
       - id: '{{ beacon_node_cont_name }}'
-        name: 'beacon-node'
+        name: '{{ beacon_node_consul_service_name }}'
         port: '{{ beacon_node_listening_port }}'
         address: '{{ beacon_node_public_address }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus']
         checks:
-          - name: 'beacon-node-health'
+          - name: '{{ beacon_node_consul_service_name }}-health'
             type: 'tcp'
             tcp: 'localhost:{{ beacon_node_listening_port }}'
 
       - id: '{{ beacon_node_cont_name }}-metrics'
-        name: 'beacon-node-metrics'
+        name: '{{ beacon_node_consul_metrics_service_name }}'
         port: '{{ beacon_node_metrics_port }}'
         address: '{{ ansible_local.tinc.vpn_ip }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus', 'metrics']
         meta:
           container: '{{ beacon_node_cont_name }}'
         #checks:
-        #  - name: 'beacon-node-metrics-health'
+        #  - name: '{{ beacon_node_consul_metrics_service_name }}-health'
         #    type: 'http'
         #    http: 'http://localhost:{{ beacon_node_metrics_port }}/metrics'
