--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -1,19 +1,4 @@
 ---
-- name: 'Create container dir: {{ beacon_node_cont_name }}'
-  file:
-    path: '{{ beacon_node_cont_vol }}/data'
-    state: directory
-    owner: dockremap
-    group: docker
-    mode: 0750
-  with_items:
-    - '{{ beacon_node_cont_vol }}/data'
-    - '{{ beacon_node_secrets_path }}'
-
-- name: Verify network name
-  assert:
-    that: '{{ beacon_node_network in ["toledo", "pyrmont", "mainnet"] }}'
-
 - name: 'Create container config: {{ beacon_node_cont_name }}'
   set_fact:
     beacon_node_compose:
@@ -45,7 +30,7 @@
             --log-level={{ beacon_node_log_level }}
             --tcp-port={{ beacon_node_listening_port }}
             --udp-port={{ beacon_node_discovery_port }}
-            --netkey-file=/data/netkey
+            --netkey-file=/{{ beacon_node_netkey_cont_path }}
             --insecure-netkey-password=true
             --rpc
             --rpc-address=0.0.0.0
