--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,6 +31,7 @@ beacon_node_mem_reserve: '{{ (ansible_memtotal_mb * 0.4) | int }}'
 
 # Consul service definition settings
 beacon_node_consul_service_name: 'beacon-node'
+beacon_node_consul_service_file_name: '{{ beacon_node_consul_service_name | replace("-", "_") }}'
 beacon_node_consul_metrics_service_name: '{{ beacon_node_consul_service_name }}-metrics'
 
 # Goerli RPC
