--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -9,10 +9,10 @@
         port: '{{ beacon_node_listening_port }}'
         address: '{{ beacon_node_public_address }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus']
-        checks:
-          - name: '{{ beacon_node_consul_service_name }}-health'
-            type: 'tcp'
-            tcp: 'localhost:{{ beacon_node_listening_port }}'
+        #checks:
+        #  - name: '{{ beacon_node_consul_service_name }}-health'
+        #    type: 'tcp'
+        #    tcp: 'localhost:{{ beacon_node_listening_port }}'
 
       - id: '{{ beacon_node_cont_name }}-metrics'
         name: '{{ beacon_node_consul_metrics_service_name }}'
@@ -21,7 +21,7 @@
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus', 'metrics']
         meta:
           container: '{{ beacon_node_cont_name }}'
-        #checks:
-        #  - name: '{{ beacon_node_consul_metrics_service_name }}-health'
-        #    type: 'http'
-        #    http: 'http://localhost:{{ beacon_node_metrics_port }}/metrics'
+        checks:
+          - name: '{{ beacon_node_consul_metrics_service_name }}-health'
+            type: 'http'
+            http: 'http://localhost:{{ beacon_node_metrics_port }}/metrics'
