--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,6 +37,8 @@ beacon_node_consul_metrics_service_name: '{{ beacon_node_consul_service_name }}-
 # Goerli RPC
 beacon_node_web3_url: 'wss://goerli.infura.io/ws/v3/6224f3c792cc443fafb64e70a98f871e'
 
+beacon_node_slashing_db_kind: 'v2'
+
 # Netkey file contents, optional.
 #beacon_node_netkey: '{"key":"json"}'
 beacon_node_netkey_cont_path: 'data/netkey'
