--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -8,18 +8,8 @@
     mode: 0644
   register: beacon_node_compose_file
 
-# This takes a while because it builds the image
-# NOTE: --compatibility flag required for mem/cpu limits
 - name: 'Create container: {{ beacon_node_cont_name }}'
-  command: >-
-    docker-compose
-      --compatibility
-      up
-      --quiet-pull
-      {% if compose_recreate or beacon_node_compose_file.changed %}
-      --force-recreate
-      {% endif %}
-      --no-color
-      -d
-  args:
-    chdir: '{{ beacon_node_cont_vol }}'
+  docker_compose:
+    project_src: '{{ beacon_node_cont_vol }}'
+    recreate: '{{ compose_recreate | ternary("always", "smart") }}'
+    pull: true
