--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 beacon_node_network: 'medalla'
 beacon_node_log_level: INFO
 beacon_node_data_folder: 'shared_{{ beacon_node_network }}_0'
+beacon_node_subscribe_all: false
 
 beacon_node_cont_tag: 'devel'
 beacon_node_cont_image: 'statusteam/nimbus_beacon_node:{{ beacon_node_cont_tag }}'
