--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -21,5 +21,5 @@
 
 - name: Verify network name
   assert:
-    that: '{{ beacon_node_network in ["toledo", "pyrmont", "mainnet"] }}'
+    that: '{{ beacon_node_network in ["toledo", "pyrmont", "prater", "mainnet"] }}'
 
