--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -9,10 +9,10 @@
         port: '{{ beacon_node_listening_port }}'
         address: '{{ beacon_node_public_address }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus']
-        #checks:
-        #  - name: '{{ beacon_node_consul_service_name }}-health'
-        #    type: 'tcp'
-        #    tcp: 'localhost:{{ beacon_node_listening_port }}'
+        checks:
+          - name: '{{ beacon_node_consul_service_name }}-health'
+            type: 'script'
+            script: '{{ beacon_node_cont_vol }}/rpc.sh get_v1_node_version'
 
       - id: '{{ beacon_node_cont_name }}-metrics'
         name: '{{ beacon_node_consul_metrics_service_name }}'
