support multiple Web3 URLs with beacon_node_web3_urls
The first URL is the default, and the rest are fallbacks.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -35,8 +35,8 @@ beacon_node_consul_service_name: 'beacon-node'
 beacon_node_consul_service_file_name: '{{ beacon_node_consul_service_name | replace("-", "_") }}'
 beacon_node_consul_metrics_service_name: '{{ beacon_node_consul_service_name }}-metrics'
 
-# Goerli RPC
-beacon_node_web3_url: 'wss://goerli.infura.io/ws/v3/6224f3c792cc443fafb64e70a98f871e'
+# WebSocket RPC URLs, Goerli for testnets
+beacon_node_web3_urls: ['wss://goerli.infura.io/ws/v3/6224f3c792cc443fafb64e70a98f871e']
 
 beacon_node_slashing_db_kind: 'v2'
 
