add steklo as a valid network name
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -29,4 +29,4 @@
 
 - name: Verify network name
   assert:
-    that: '{{ beacon_node_network in ["toledo", "pyrmont", "prater", "mainnet"] }}'
+    that: '{{ beacon_node_network in ["toledo", "pyrmont", "prater", "mainnet", "steklo"] }}'
