--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,9 @@ beacon_node_data_folder: 'shared_{{ beacon_node_network }}_0'
 beacon_node_subscribe_all: false
 beacon_node_doppelganger_detection: true
 
+# For validation
+beacon_node_valid_network_names: ["toledo", "pyrmont", "prater", "mainnet", "steklo", "nocturne"]
+
 beacon_node_cont_tag: 'devel'
 beacon_node_cont_image: 'statusteam/nimbus_beacon_node:{{ beacon_node_cont_tag }}'
 beacon_node_cont_name: 'beacon-node-{{ beacon_node_network }}'
