--- a/tasks/checks.yml
+++ b/tasks/checks.yml
@@ -1,8 +1,13 @@
 ---
-- name: 'Verify web3 URLs are provided'
+- name: Verify web3 URLs are provided
   assert:
     that: '{{ beacon_node_web3_urls|length > 0 }}'
     quiet: true
     fail_msg: |
       Providing Web3 URLs is required to sync with Eth1 chain!
       Verify that the 'beacon_node_web3_urls' variable is set.
+
+- name: Verify network name
+  assert:
+    that: '{{ beacon_node_network in beacon_node_valid_network_names }}'
+
