switch to using WireGuard VPN instead of Tinc
https://github.com/status-im/infra-hq/issues/58

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -20,7 +20,7 @@
       - id: '{{ beacon_node_cont_name }}-metrics'
         name: '{{ beacon_node_consul_metrics_service_name }}'
         port: '{{ beacon_node_metrics_port }}'
-        address: '{{ ansible_local.tinc.vpn_ip }}'
+        address: '{{ ansible_local.wireguard.vpn_ip }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus', 'metrics']
         meta:
           container: '{{ beacon_node_cont_name }}'
