rafactor to make use of infra-role-dist-validators
This way we can handle hosts with multiple nodes in different folders.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/checks.yml
+++ b/tasks/checks.yml
@@ -10,4 +10,7 @@
 - name: Verify network name
   assert:
     that: '{{ beacon_node_network in beacon_node_valid_network_names }}'
-
+    quiet: true
+    fail_msg: |
+      Provided network name does not match any of expected values.
+      Expected: {{ beacon_node_valid_network_names | join(", ") }}'
