--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,14 @@ beacon_node_cont_update_enabled: true
 # Subfolders for separate read-only mounting
 beacon_node_secrets_path: '{{ beacon_node_cont_vol }}/data/{{ beacon_node_data_folder }}/secrets'
 
+# Automatically distribute validators
+beacon_node_dist_validators_enabled: false
+beacon_node_dist_validators_name: '{{ beacon_node_network }}_deposits'
+beacon_node_dist_validators_data_path: '{{ beacon_node_cont_vol }}/data/{{ beacon_node_data_folder }}'
+#beacon_node_dist_validators_name: ~
+#beacon_node_dist_validators_start: ~
+#beacon_node_dist_validators_end: ~
+
 # connectivity settings
 beacon_node_discovery_port: 9000
 beacon_node_listening_port: 9000
