--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: Save iptables rules
-  shell: iptables-save > /etc/iptables/rules.v4
+  shell: 'iptables-save > /etc/iptables/rules.v4'
