--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,5 +3,7 @@
 - import_tasks: install.yml
 - import_tasks: config.yml
 - import_tasks: container.yml
+- import_tasks: validators.yml
+  when: beacon_node_dist_validators_enabled
 - import_tasks: firewall.yml
 - import_tasks: consul.yml
