update use of dist-validators to supply user
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,3 +13,6 @@ galaxy_info:
     - name: consul-service
       src: git+git@github.com:status-im/infra-role-consul-service.git
       scm: git
+    - name: infra-role-dist-validators
+      src: git+git@github.com:status-im/infra-role-dist-validators.git
+      scm: git
