--- a/tasks/validators.yml
+++ b/tasks/validators.yml
@@ -2,6 +2,7 @@
 - name: 'Distribute validators and secrets'
   include_role: name=infra-role-dist-validators
   vars:
+    dist_validators_user: 'dockremap'
     dist_validators_name: '{{ beacon_node_dist_validators_name }}'
     dist_validators_start: '{{ beacon_node_dist_validators_start | mandatory }}'
     dist_validators_end: '{{ beacon_node_dist_validators_end | mandatory }}'
@@ -10,7 +11,7 @@
 - when: dist_validators_deployed is defined
   block:
     - name: 'Show number of validators deployed'
-      debug: msg='Deployed {{ dist_validators_deployed|length }} validators'
+      debug: msg='Deployed {{ dist_validators_deployed }} validators'
 
     - name: 'Restart beacon node container'
       command: 'docker-compose restart'
