use infra-role-open-ports, open metrics for metrics.hq
https://github.com/status-im/infra-hq/issues/69

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,9 @@ galaxy_info:
     - name: consul-service
       src: git+git@github.com:status-im/infra-role-consul-service.git
       scm: git
+    - name: open-ports
+      src: git+git@github.com:status-im/infra-role-open-ports.git
+      scm: git
     - name: infra-role-dist-validators
       src: git+git@github.com:status-im/infra-role-dist-validators.git
       scm: git
