add beacon_node_*_light_client_data variables
To control the `--serve-light-client-data` and
`--import-light-client-data` flags.

Signed-off-by: Etan Kissling <etan@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,6 +50,10 @@ beacon_node_rest_enabled: true
 beacon_node_rest_address: '127.0.0.1'
 beacon_node_rest_port: 5052
 
+# Serving light client data
+beacon_node_serve_light_client_data: false
+beacon_node_import_light_client_data: 'none'
+
 # resource limits, mem in MB
 beacon_node_mem_limit: '{{ (ansible_memtotal_mb * 0.5) | int }}'
 beacon_node_mem_reserve: '{{ (ansible_memtotal_mb * 0.4) | int }}'
